# Call-me-maybe

./: .gitignore  Makefile  README.md  TO_DO_LIST.md  mypy.ini  pyproject.toml  scratch.py
data/input/: function_calling_tests.json  functions_definition.json
src/: __main__.py  constrained_decoder.py  file_parser.py  generator.py  models.py  parser.py  prompt_builder.py
