[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.21.0",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
